--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,16 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/your_database_name?useSSL=false
-spring.datasource.username=your_db_username
-spring.datasource.password=your_db_password
-spring.datasource.url=jdbc:mysql://localhost:3306/hotel_api?useTimezone=true&serverTimezone=UTC 
+#lOCALE
+spring.mvc.locale-resolver=fixed
+spring.mvc.locale=pt_BR
+
+#DATA-BASE
+spring.datasource.url=jdbc:mysql://localhost:3306/hotel_api?useSSL=false&serverTimezone=America/Sao_Paulo
+spring.datasource.username=root
+spring.datasource.password=Deathgaze1998@
+
  
+ #JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=false
 
